HelloUltraviolet/Fixtures/RejectedSource/Procedures/MethodsAndReceiversDiagnostic/Expected.uv
//! Expected diagnostic metadata for the MethodsAndReceiversDiagnostic rejected-source specimen.

expectedDiagnostic("E-TYP-1912", "diag.15.MethodsAndReceivers")
